--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,6 @@ spring:
           environment:
             spring:
               rabbitmq:
-                host: localhost
+                host: 192.168.99.100
                 port: 5672
         
