--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+        classpath "com.bmuschko:gradle-docker-plugin:4.2.0"
+ 	}
 }
 
 apply plugin: 'java'
