--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -23,6 +24,7 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+    jcenter()
 	maven { url "https://repo.spring.io/milestone" }
 }
 
